--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.8.4",
     "cantrash": "^1.0.4",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +32,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-redux": "^9.2.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tailwind-scrollbar": "^4.0.2",
