--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.9.0",
+    "@spotify/web-api-ts-sdk": "^1.2.0",
     "axios": "^1.8.4",
     "cantrash": "^1.0.4",
     "class-variance-authority": "^0.7.1",
